Fix nav info block: increase max-width to prevent email overflow

--- a/src/css/sections.css
+++ b/src/css/sections.css
@@ -31,7 +31,7 @@
 }
 
 .nav__info-block {
-  max-width: 200px;
+  max-width: 240px;
 }
 
 .nav__info-label {
